--- a/mysql/base/kustomization.yml
+++ b/mysql/base/kustomization.yml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
+resources:
   - pvc.yml
   - service.yml
   - deployment.yml
@@ -15,8 +15,12 @@ images:
 
 secretGenerator:
   - name: root-db-credentials
-    envs:
-      - ./config-files/db.env
+    env: ./config-files/db.env
+
+configMapGenerator:
+  - name: users-dbs-config
+    files:
+      - config-files/authentication.sql
 
 commonLabels:
   app: mysql
