--- a/mysql/overlays/staging/kustomization.yml
+++ b/mysql/overlays/staging/kustomization.yml
@@ -8,6 +8,7 @@ nameSuffix: -staging
 
 configMapGenerator:
   - name: users-dbs-config
+    behavior: replace
     files:
       - config-files/authentication.sql
 
