--- a/mysql/base/deployment.yml
+++ b/mysql/base/deployment.yml
@@ -45,7 +45,7 @@ spec:
             name: mysql-pvc
           - mountPath: /var/lib/mysql-root-credentials
             name: mysql-root-credentials
-          - mountPath: /var/lib/mysql-users-dbs-config
+          - mountPath: /docker-entrypoint-initdb.d
             name: mysql-users-dbs-config
       volumes:
         - name: mysql-pvc
